src/objects/Organization_Sales_Summary__c.object
<CustomObject>
    <fields>
        <fullName>AUM_AUD__c</fullName>
        <label>AUM - AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AUM_CAD__c</fullName>
        <label>AUM - CAD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AUM_Euro__c</fullName>
        <label>AUM - Euro</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AUM_GBP__c</fullName>
        <label>AUM - GBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AUM_JPY__c</fullName>
        <label>AUM - JPY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AUM_SGD__c</fullName>
        <label>AUM - SGD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AUM_USD__c</fullName>
        <label>AUM - USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_End_Date__c</fullName>
        <label>Month End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Organization_MDM_ID__c</fullName>
        <externalId>true</externalId>
        <label>Organization MDM ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Organization Sales Summary</relationshipLabel>
        <relationshipName>Organization_Sales_Summary</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PY_DCI_Sales_AUD__c</fullName>
        <label>PY DCI Sales - AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PY_DCI_Sales_CAD__c</fullName>
        <label>PY DCI Sales - CAD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PY_DCI_Sales_EURO__c</fullName>
        <label>PY DCI Sales - EURO</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PY_DCI_Sales_GBP__c</fullName>
        <label>PY DCI Sales - GBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PY_DCI_Sales_JPY__c</fullName>
        <label>PY DCI Sales - JPY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PY_DCI_Sales_SGD__c</fullName>
        <label>PY DCI Sales - SGD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PY_DCI_Sales_USD__c</fullName>
        <label>PY DCI Sales - USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PY_Red_AUD__c</fullName>
        <label>PY Red - AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PY_Red_CAD__c</fullName>
        <label>PY Red - CAD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PY_Red_Euro__c</fullName>
        <label>PY Red - Euro</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PY_Red_GBP__c</fullName>
        <label>PY Red - GBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PY_Red_JPY__c</fullName>
        <label>PY Red - JPY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PY_Red_SGD__c</fullName>
        <label>PY Red - SGD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PY_Red_USD__c</fullName>
        <label>PY Red - USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PY_Sales_AUD__c</fullName>
        <label>PY Sales - AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PY_Sales_CAD__c</fullName>
        <label>PY Sales - CAD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PY_Sales_Euro__c</fullName>
        <label>PY Sales - Euro</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PY_Sales_GBP__c</fullName>
        <label>PY Sales - GBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PY_Sales_JPY__c</fullName>
        <label>PY Sales - JPY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PY_Sales_SGD__c</fullName>
        <label>PY Sales - SGD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PY_Sales_USD__c</fullName>
        <label>PY Sales - USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Refresh_Date__c</fullName>
        <label>Refresh Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>YTD_DCI_Sales_AUD__c</fullName>
        <label>YTD DCI Sales - AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_DCI_Sales_CAD__c</fullName>
        <label>YTD DCI Sales - CAD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_DCI_Sales_EURO__c</fullName>
        <label>YTD DCI Sales - EURO</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_DCI_Sales_GBP__c</fullName>
        <label>YTD DCI Sales - GBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_DCI_Sales_JPY__c</fullName>
        <label>YTD DCI Sales - JPY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_DCI_Sales_SGD__c</fullName>
        <label>YTD DCI Sales - SGD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_DCI_Sales_USD__c</fullName>
        <label>YTD DCI Sales - USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Red_AUD__c</fullName>
        <label>YTD Red - AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Red_CAD__c</fullName>
        <label>YTD Red - CAD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Red_Euro__c</fullName>
        <label>YTD Red - Euro</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Red_GBP__c</fullName>
        <label>YTD Red - GBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Red_JPY__c</fullName>
        <label>YTD Red - JPY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Red_SGD__c</fullName>
        <label>YTD Red - SGD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Red_USD__c</fullName>
        <label>YTD Red - USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Sales_AUD__c</fullName>
        <label>YTD Sales - AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Sales_CAD__c</fullName>
        <label>YTD Sales - CAD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Sales_Euro__c</fullName>
        <label>YTD Sales - Euro</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Sales_GBP__c</fullName>
        <label>YTD Sales - GBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Sales_JPY__c</fullName>
        <label>YTD Sales - JPY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Sales_SGD__c</fullName>
        <label>YTD Sales - SGD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Sales_USD__c</fullName>
        <label>YTD Sales - USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Organization Sales Summary</label>
    <nameField>
        <label>Organization Sales Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Organization Sales Summary</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>